--- a/doxygenOutput/latex/index.tex
+++ b/doxygenOutput/latex/index.tex
@@ -2,9 +2,7 @@
 \Hypertarget{index_md_README}%
 For course work for a class at Grand Canyon University
 
-By Benjamin Carter and Josh Canode.
-
-\DoxyHorRuler{0}
+By Benjamin Carter and Josh Canode.\hypertarget{index_autotoc_md1}{}\doxysection{$<$a href=\char`\"{}https\+://codingcando.\+com/file\+Share/file?code=\+TDAX62\+YKEW\char`\"{}$>$\+Watch Video Here$<$/a$>$}\label{index_autotoc_md1}
 \hypertarget{index_autotoc_md2}{}\doxysubsection{Requirements\+:}\label{index_autotoc_md2}
 
 \begin{DoxyEnumerate}
