Fix heading format

--- a/doxygenOutput/latex/index.tex
+++ b/doxygenOutput/latex/index.tex
@@ -2,7 +2,11 @@
 \Hypertarget{index_md_README}%
 For course work for a class at Grand Canyon University
 
-By Benjamin Carter and Josh Canode.\hypertarget{index_autotoc_md1}{}\doxysection{$<$a href=\char`\"{}https\+://codingcando.\+com/file\+Share/file?code=\+TDAX62\+YKEW\char`\"{}$>$\+Watch Video Here$<$/a$>$}\label{index_autotoc_md1}
+By Benjamin Carter and Josh Canode.
+
+\href{https://codingcando.com/fileShare/file?code=TDAX62YKEW}{\texttt{ Watch Video Here}}
+
+\DoxyHorRuler{0}
 \hypertarget{index_autotoc_md2}{}\doxysubsection{Requirements\+:}\label{index_autotoc_md2}
 
 \begin{DoxyEnumerate}
@@ -33,7 +37,7 @@ File Structure\+:
 \begin{DoxyItemize}
 \item This is where the header files are
 \end{DoxyItemize}
-\item Report.\+docx/.pdf
+\item Project8.\+docx/.pdf
 \begin{DoxyItemize}
 \item The report
 \end{DoxyItemize}
